--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -2,6 +2,7 @@
 <div class="grid grid-pad">
   <a *ngFor="let hero of heroes"  [routerLink]="['/detail', hero.id]"  class="col-1-4">
     <div class="module hero">
+    	{{hero.name}}
     </div>
   </a>
 </div>
