--- a/src/app/hero-detail.component.html
+++ b/src/app/hero-detail.component.html
@@ -1,9 +1,19 @@
 <div *ngIf="hero">
   <h2>{{hero.name}} details!</h2>
   <div>
-    <label>id: </label>{{hero.id}}</div>
+    <label>id: </label>{{hero.id}}
+  </div>
   <div>
-    <label>name: </label>
+    <label>name: </label>{{hero.name}}
   </div>
   <button (click)="goBack()">Back</button>
+</div>
+<div *ngIf="!hero">
+  <div>
+    <label>id: </label>
+  </div>
+  <div>
+    <label>name: </label><input type="text" [(ngModel)]="name">
+  </div>
+  <button (click)="saveHero(name)">Save</button>
 </div>
