--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -3,8 +3,11 @@
   <li *ngFor="let hero of heroes"
     (click)="onSelect(hero)">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
+    <button class="delete-button" (click)="deleteHero(hero.id)">Delete</button>
   </li>
 </ul>
+<button (click)="addHeroSelected = !addHeroSelected">Add a Hero</button>
+<app-hero-detail *ngIf="addHeroSelected"></app-hero-detail>
 <div *ngIf="selectedHero">
   <h2>
     {{selectedHero.name | uppercase}} is my hero
